# upstage-gangwon-fastapi-lecture

./: .env.example  .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml  cicd.yml  deploy-ci.yml  deploy-k8s.yml  deploy-release.yml  deploy-version.yml  deploy.yml
app/: logging.py
app/service/: user_service.py
infra/k8s/application/: 02-configmap.yaml  03-chromadb.yaml  04-backend.yaml  05-ingress.yaml  README.md
infra/k8s/situation/: hpa-cpu.yaml  stress-cpu-limit.yaml  stress-cpu-no-limit.yaml
introduce/: wsy-자기소개.md  이창진자기소개.md
tests/: test_user_repository.py  test_user_service.py
